--- a/08-events/assignment/pixart/index.html
+++ b/08-events/assignment/pixart/index.html
@@ -10,7 +10,7 @@
   <div class="controls">
     <form id="form">
       <input type="text" id="color-field"></input>
-      <button id="set-color">Set Color</button>
+      <button type="sumbit" id="set-color">Set Color</button>
     </form>
     <div class="brush"></div>
   </div>
